// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment the counter 1`] = `
<div
  className="productCard "
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should show the component correctly 1`] = `
<div
  className="productCard "
>
  <h1>
    Product Card
  </h1>
</div>
`;
